--- a/packages/design-carousel/package.json
+++ b/packages/design-carousel/package.json
@@ -29,6 +29,7 @@
 		"watch": "tsc --build ./tsconfig.json --watch"
 	},
 	"dependencies": {
+		"@automattic/design-picker": "workspace:^",
 		"@automattic/i18n-utils": "workspace:^",
 		"@automattic/onboarding": "workspace:^",
 		"classnames": "^2.3.1",
