--- a/packages/jetpack-ai-calypso/tsconfig.json
+++ b/packages/jetpack-ai-calypso/tsconfig.json
@@ -5,5 +5,6 @@
 		"outDir": "dist/esm",
 		"declarationDir": "dist/types",
 		"rootDir": "src"
-	}
+	},
+	"references": [ { "path": "../data-stores" } ]
 }
