--- a/package.json
+++ b/package.json
@@ -296,6 +296,7 @@
 		"stylelint": "^14.16.1",
 		"tslib": "^2.3.0",
 		"typescript": "^5.3.3",
+		"v8-profiler-next": "^1.10.0",
 		"webpack": "^5.89.0",
 		"webpack-bundle-analyzer": "^4.10.1",
 		"webpack-cli": "^4.10.0",
