--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -47,8 +47,7 @@
 		"react-router-dom": "^6.10.0",
 		"react-slider": "^2.0.5",
 		"utility-types": "^3.10.0",
-		"uuid": "^8.3.2",
-		"wpcom-proxy-request": "workspace:^"
+		"uuid": "^8.3.2"
 	},
 	"peerDependencies": {
 		"@wordpress/data": "^9.18.0",
