--- a/packages/plans-grid-next/package.json
+++ b/packages/plans-grid-next/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@automattic/plans-grid-next",
 	"version": "1.0.0-alpha.0",
-	"description": "WPCOM plans grid UI components.",
+	"description": "WordPress.com plans UI grid components and helpers.",
 	"homepage": "https://github.com/Automattic/wp-calypso",
 	"license": "GPL-2.0-or-later",
 	"author": "Automattic Inc.",
@@ -15,7 +15,7 @@
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/Automattic/wp-calypso.git",
-		"directory": "packages/components"
+		"directory": "packages/plans-grid-next"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -27,30 +27,27 @@
 	],
 	"types": "dist/types",
 	"dependencies": {
-		"@automattic/calypso-analytics": "workspace:^",
-		"@automattic/calypso-url": "workspace:^",
+		"@automattic/calypso-products": "workspace:^",
+		"@automattic/components": "workspace:^",
+		"@automattic/data-stores": "workspace:^",
 		"@automattic/format-currency": "workspace:^",
-		"@automattic/search": "workspace:^",
-		"@automattic/typography": "workspace:^",
-		"@automattic/viewport-react": "workspace:^",
-		"@wordpress/base-styles": "^4.39.0",
-		"@wordpress/components": "^25.14.0",
-		"@wordpress/icons": "^9.39.0",
-		"@wordpress/react-i18n": "^3.46.0",
-		"canvas-confetti": "^1.6.0",
+		"@automattic/onboarding": "workspace:^",
+		"@automattic/shopping-cart": "workspace:^",
+		"@automattic/viewport": "workspace:^",
+		"@emotion/react": "11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@wordpress/data": "^9.18.0",
+		"@wordpress/element": "^5.25.0",
+		"@wordpress/url": "^3.49.0",
+		"@wordpress/warning": "^2.48.0",
 		"classnames": "^2.3.2",
-		"gridicons": "^3.4.2",
 		"i18n-calypso": "workspace:^",
-		"lodash": "^4.17.21",
-		"prop-types": "^15.7.2",
-		"react-modal": "^3.16.1",
-		"react-router-dom": "^6.10.0",
-		"react-slider": "^2.0.5",
-		"utility-types": "^3.10.0",
-		"uuid": "^8.3.2"
+		"react-intersection-observer": "^9.4.3",
+		"react-transition-group": "^4.3.0"
 	},
 	"peerDependencies": {
-		"@wordpress/data": "^9.18.0",
+		"@wordpress/i18n": "^4.48.0",
+		"postcss": "^8.4.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
@@ -65,10 +62,6 @@
 		"@testing-library/jest-dom": "^6.2.0",
 		"@testing-library/react": "^14.1.2",
 		"@testing-library/user-event": "^14.5.2",
-		"@types/canvas-confetti": "^1.6.0",
-		"@types/react-slider": "^1.3.4",
-		"postcss": "^8.4.5",
-		"qrcode.react": "^3.1.0",
 		"resize-observer-polyfill": "^1.5.1",
 		"typescript": "^5.3.3",
 		"webpack": "^5.89.0"
