--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
 		"@automattic/notifications": "workspace:^",
 		"@automattic/onboarding": "workspace:^",
 		"@automattic/plans-grid": "workspace:^",
+		"@automattic/plans-grid-next": "workspace:^",
 		"@automattic/react-virtualized": "^9.22.4",
 		"@automattic/request-external-access": "workspace:^",
 		"@automattic/search": "workspace:^",
