--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -134,6 +134,11 @@
 
 # Plans
 /client/my-sites/plans-grid @Automattic/martech-decepticons
+/packages/plans-grid @Automattic/martech-decepticons
+/packages/plans-grid-next @Automattic/martech-decepticons
+/packages/data-stores/plans @Automattic/martech-decepticons
+/packages/data-stores/add-ons @Automattic/martech-decepticons
+/packages/data-stores/wpcom-plans-ui @Automattic/martech-decepticons
 
 # Importing
 /client/my-sites/importer @Automattic/caribou
