--- a/apps/wpcom-block-editor/package.json
+++ b/apps/wpcom-block-editor/package.json
@@ -60,6 +60,7 @@
 		"@wordpress/dependency-extraction-webpack-plugin": "^5.0.0",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.5",
-		"webpack": "^5.89.0"
+		"webpack": "^5.89.0",
+		"webpack-bundle-analyzer": "^4.10.1"
 	}
 }
