--- a/packages/plans-grid-next/tsconfig.json
+++ b/packages/plans-grid-next/tsconfig.json
@@ -9,5 +9,9 @@
 	},
 	"include": [ "src" ],
 	"exclude": [ "**/test/*" ],
-	"references": [ { "path": "../data-stores" }, { "path": "../onboarding" } ]
+	"references": [
+		{ "path": "../data-stores" },
+		{ "path": "../onboarding" },
+		{ "path": "../viewport" }
+	]
 }
