--- a/packages/calypso-router/package.json
+++ b/packages/calypso-router/package.json
@@ -29,7 +29,7 @@
 		"url": "git+https://github.com/Automattic/wp-calypso.git",
 		"directory": "packages/calypso-router"
 	},
-	"license": "MIT",
+	"license": "GPL-2.0-or-later",
 	"bugs": "https://github.com/Automattic/wp-calypso/issues",
 	"homepage": "https://github.com/Automattic/wp-calypso/tree/HEAD/packages/calypso-router#readme"
 }
