--- a/packages/jetpack-ai-calypso/tsconfig.json
+++ b/packages/jetpack-ai-calypso/tsconfig.json
@@ -6,5 +6,6 @@
 		"declarationDir": "dist/types",
 		"rootDir": "src"
 	},
-	"files": [ "./global.d.ts" ]
+	"files": [ "./global.d.ts" ],
+	"references": [ { "path": "../calypso-analytics" }, { "path": "../data-stores" } ]
 }
