--- a/.github/workflows/icfy-stats.yml
+++ b/.github/workflows/icfy-stats.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Fetch git history
         run: git fetch --prune --unshallow
       - name: Install dependencies
-        run: SKIP_TSC=true yarn install --inline-builds
+        run: yarn install --inline-builds
       - name: Build ICFY stats
         env:
           NODE_ENV: production
