--- a/packages/jetpack-ai-calypso/package.json
+++ b/packages/jetpack-ai-calypso/package.json
@@ -38,7 +38,7 @@
 	"scripts": {
 		"clean": "tsc --build ./tsconfig.json ./tsconfig-cjs.json --clean && rm -rf dist",
 		"build": "tsc --build ./tsconfig.json ./tsconfig-cjs.json && copy-assets",
-		"prepare": "yarn run clean && yarn run build",
+		"prepare": "yarn run build",
 		"prepack": "yarn run clean && yarn run build",
 		"watch": "tsc --build ./tsconfig.json --watch"
 	},
@@ -55,6 +55,7 @@
 	},
 	"peerDependencies": {
 		"@babel/runtime": "^7.23.8",
+		"@wordpress/data": "^9.19.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
@@ -65,6 +66,7 @@
 	},
 	"dependencies": {
 		"@automattic/calypso-analytics": "workspace:^",
+		"@automattic/data-stores": "workspace:^",
 		"classnames": "^2.3.2",
 		"debug": "^4.3.4"
 	}
