--- a/apps/editing-toolkit/package.json
+++ b/apps/editing-toolkit/package.json
@@ -33,6 +33,7 @@
 		"build:wpcom-block-description-links": "calypso-build --env source='wpcom-block-description-links'",
 		"build:wpcom-block-editor-nav-sidebar": "calypso-build --env source='wpcom-block-editor-nav-sidebar'",
 		"build:wpcom-block-editor-nux": "calypso-build --env source='wpcom-block-editor-nux'",
+		"build:wpcom-command-palette": "calypso-build --env source='wpcom-command-palette'",
 		"build:wpcom-documentation-links": "calypso-build --env source='wpcom-documentation-links'",
 		"build:wpcom-domain-upsell-callout": "calypso-build --env source='wpcom-domain-upsell-callout'",
 		"build:wpcom-global-styles": "calypso-build --env source='wpcom-global-styles','wpcom-global-styles/wpcom-global-styles-view'",
@@ -102,6 +103,7 @@
 		"@wordpress/rich-text": "^6.27.0",
 		"@wordpress/server-side-render": "^4.27.1",
 		"@wordpress/url": "^3.51.0",
+		"@wordpress/warning": "^2.50.0",
 		"calypso": "workspace:^",
 		"classnames": "^2.3.2",
 		"eslint": "^8.56.0",
