--- a/client/package.json
+++ b/client/package.json
@@ -91,6 +91,7 @@
 		"@wordpress/components": "^26.0.1",
 		"@wordpress/compose": "^6.28.0",
 		"@wordpress/data": "^9.21.0",
+		"@wordpress/dataviews": "^0.4.1",
 		"@wordpress/dom": "^3.51.0",
 		"@wordpress/edit-post": "^7.28.1",
 		"@wordpress/element": "^5.28.0",
