--- a/packages/wp-babel-makepot/package.json
+++ b/packages/wp-babel-makepot/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@automattic/wp-babel-makepot",
-	"version": "1.1.1",
+	"version": "1.2.0",
 	"description": "A utility for extracting translatable strings from JavaScript source.",
 	"bugs": "https://github.com/Automattic/wp-calypso/issues",
 	"homepage": "https://github.com/Automattic/wp-calypso",
@@ -30,6 +30,7 @@
 		"@babel/core": "^7.23.7",
 		"@babel/plugin-proposal-class-properties": "^7.18.6",
 		"@babel/plugin-proposal-decorators": "^7.23.7",
+		"@babel/plugin-transform-private-methods": "^7.23.3",
 		"@babel/preset-env": "^7.23.8",
 		"@babel/preset-react": "^7.23.3",
 		"@babel/preset-typescript": "^7.23.3",
