--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
 		"distclean": "yarn run clean && rm -rf **/node_modules **/.cache .yarn/install-state.gz || true",
 		"docker": "docker run -it --name wp-calypso --rm -p 80:3000 wp-calypso",
 		"docker-jetpack-cloud": "docker run -it --env CALYPSO_ENV=jetpack-cloud-production --name wp-calypso --rm -p 80:3000 wp-calypso",
+		"docker-a8c-for-agencies": "docker run -it --env CALYPSO_ENV=a8c-for-agencies-production --name wp-calypso --rm -p 80:3000 wp-calypso",
 		"eslint-branch": "node bin/eslint-branch.js",
 		"feature-search": "node bin/feature-search.js",
 		"generate": "generate-calypso-package",
@@ -109,6 +110,8 @@
 		"start-build": "BROWSERSLIST_ENV=evergreen node build/server.js | bunyan -o short",
 		"start-jetpack-cloud": "CALYPSO_ENV=jetpack-cloud-development yarn run start",
 		"start-jetpack-cloud-p": "PORT=3001 CALYPSO_ENV=jetpack-cloud-development yarn run build-server && PORT=3001 CALYPSO_ENV=jetpack-cloud-development yarn run start-build",
+		"start-a8c-for-agencies": "CALYPSO_ENV=a8c-for-agencies-development yarn run start",
+		"start-a8c-for-agencies-p": "PORT=3002 CALYPSO_ENV=a8c-for-agencies-development yarn run build-server && PORT=3002 CALYPSO_ENV=a8c-for-agencies-development yarn run start-build",
 		"storybook:start": "sb dev -c ./.storybook -p 6006",
 		"storybook:build": "sb build -c ./.storybook",
 		"test": "run-s -s test-client test-packages test-server test-build-tools",
