--- a/apps/command-palette-wp-admin/package.json
+++ b/apps/command-palette-wp-admin/package.json
@@ -21,14 +21,19 @@
 		"build": "NODE_ENV=production yarn dev",
 		"build:command-palette-wp-admin": "calypso-build",
 		"teamcity:build-app": "yarn run build && yarn run translate",
-		"dev": "yarn run calypso-apps-builder --localPath dist --remotePath /home/wpcom/public_html/widgets.wp.com/command-palette"
+		"dev": "yarn run calypso-apps-builder --localPath dist --remotePath /home/wpcom/public_html/widgets.wp.com/command-palette",
+		"translate": "rm -rf dist/strings && mkdirp dist && wp-babel-makepot '../../{client,packages,apps}/**/*.{js,jsx,ts,tsx}' --ignore '**/node_modules/**,**/test/**,**/*.d.ts' --base '../../' --dir './dist/strings' --output './dist/command-palette-strings.pot' && node bin/build-languages.js"
 	},
 	"dependencies": {
 		"@automattic/command-palette": "workspace:^",
+		"@automattic/i18n-utils": "workspace:^",
 		"@tanstack/react-query": "^5.15.5",
 		"@wordpress/data": "^9.20.0",
 		"@wordpress/dom-ready": "^3.50.0",
+		"@wordpress/i18n": "^4.51.0",
+		"@wordpress/react-i18n": "^3.49.0",
 		"calypso": "workspace:^",
+		"i18n-calypso": "workspace:^",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"redux": "^4.2.1"
@@ -37,7 +42,13 @@
 		"@automattic/calypso-apps-builder": "workspace:^",
 		"@automattic/calypso-build": "workspace:^",
 		"@automattic/calypso-eslint-overrides": "workspace:^",
+		"@automattic/languages": "workspace:^",
+		"@automattic/wp-babel-makepot": "workspace:^",
 		"@wordpress/dependency-extraction-webpack-plugin": "^5.1.0",
+		"gettext-parser": "6.0.0",
+		"lodash": "^4.17.21",
+		"mkdirp": "1.0.4",
+		"node-fetch": "2.6.6",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.5",
 		"webpack": "^5.90.0",
