--- a/renovate.json5
+++ b/renovate.json5
@@ -79,8 +79,8 @@
 	],
 	ignoreDeps: [
 		'electron-builder',
-		// We're intentionally locking to v0.4.1, see https://github.com/Automattic/wp-calypso/pull/87956
-		// @TODO: Remove once updated to use the latest version
+		// We're intentionally locking to v1.0.0, see https://github.com/Automattic/wp-calypso/pull/89739
+		// @TODO: Remove once DataViews become more stable - it will be updated manually until then.
 		'@wordpress/dataviews',
 	],
 	regexManagers: [
