--- a/apps/command-palette-wp-admin/package.json
+++ b/apps/command-palette-wp-admin/package.json
@@ -22,7 +22,7 @@
 		"build:command-palette-wp-admin": "calypso-build",
 		"teamcity:build-app": "yarn run build && yarn run translate",
 		"dev": "yarn run calypso-apps-builder --localPath dist --remotePath /home/wpcom/public_html/widgets.wp.com/command-palette",
-		"translate": "rm -rf dist/strings && mkdirp dist && wp-babel-makepot '../../{client,packages,apps}/**/*.{js,jsx,ts,tsx}' --ignore '**/node_modules/**,**/test/**,**/*.d.ts' --base '../../' --dir './dist/strings' --output './dist/command-palette-strings.pot' && node bin/build-languages.js"
+		"translate": "rm -rf dist/strings && mkdirp dist && wp-babel-makepot '../../{client,packages,apps}/**/*.{js,jsx,ts,tsx}' --ignore '**/node_modules/**,**/test/**,**/*.d.ts' --base '../../' --dir './dist/strings' --output './dist/command-palette-strings.pot' && build-app-languages --stringsFilePath='./dist/command-palette-strings.pot'"
 	},
 	"dependencies": {
 		"@automattic/command-palette": "workspace:^",
