--- a/apps/odyssey-stats/package.json
+++ b/apps/odyssey-stats/package.json
@@ -26,7 +26,7 @@
 		"test:js:watch": "yarn test:js --watch",
 		"test:size": "size-limit",
 		"teamcity:build-app": "yarn run build && yarn run test:size",
-		"translate": "rm -rf dist/strings && mkdirp dist && wp-babel-makepot '../../{client,packages,apps}/**/*.{js,jsx,ts,tsx}' --ignore '**/node_modules/**,**/test/**,**/*.d.ts' --base '../../' --dir './dist/strings' --output './dist/odyssey-strings.pot' && node bin/build-languages.js"
+		"translate": "rm -rf dist/strings && mkdirp dist && wp-babel-makepot '../../{client,packages,apps}/**/*.{js,jsx,ts,tsx}' --ignore '**/node_modules/**,**/test/**,**/*.d.ts' --base '../../' --dir './dist/strings' --output './dist/odyssey-strings.pot' && build-app-languages --stringsFilePath=./dist/odyssey-strings.pot"
 	},
 	"dependencies": {
 		"@automattic/calypso-color-schemes": "workspace:^",
