--- a/packages/calypso-build/package.json
+++ b/packages/calypso-build/package.json
@@ -24,6 +24,7 @@
 	},
 	"bugs": "https://github.com/Automattic/wp-calypso/issues",
 	"bin": {
+		"build-app-languages": "./bin/build-app-languages.js",
 		"calypso-build": "./bin/calypso-build.js",
 		"copy-assets": "./bin/copy-assets.js",
 		"transpile": "./bin/transpile.js"
@@ -34,6 +35,7 @@
 	"types": "./typings/calypso-assets/index.d.ts",
 	"dependencies": {
 		"@automattic/calypso-babel-config": "workspace:^",
+		"@automattic/languages": "workspace:^",
 		"@automattic/webpack-rtl-plugin": "workspace:^",
 		"@babel/compat-data": "^7.23.5",
 		"@babel/core": "^7.24.0",
@@ -46,7 +48,9 @@
 		"css-loader": "^6.11.0",
 		"css-minimizer-webpack-plugin": "^3.4.1",
 		"duplicate-package-checker-webpack-plugin": "^3.0.0",
+		"lodash": "^4.17.21",
 		"mini-css-extract-plugin": "^1.6.2",
+		"node-fetch": "^2.6.6",
 		"postcss-custom-properties": "^11.0.0",
 		"postcss-loader": "^6.2.1",
 		"recursive-copy": "^2.0.14",
@@ -57,11 +61,13 @@
 		"terser-webpack-plugin": "^5.3.10",
 		"thread-loader": "^3.0.4",
 		"typescript": "^5.3.3",
-		"webpack-cli": "^4.10.0"
+		"webpack-cli": "^4.10.0",
+		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
 		"@automattic/calypso-eslint-overrides": "workspace:^",
-		"@automattic/calypso-typescript-config": "workspace:^"
+		"@automattic/calypso-typescript-config": "workspace:^",
+		"gettext-parser": "^6.0.0"
 	},
 	"peerDependencies": {
 		"postcss": "^8.4.5",
